--- a/.env
+++ b/.env
@@ -3,3 +3,19 @@ echo "Activate blog virtualenv"
 echo "========================"
 
 pyenv activate blog
+
+
+echo "========================="
+echo "Set environment variables"
+echo "========================="
+
+export DJANGO_SETTINGS_MODULE="wpsblog.settings.development"
+
+
+echo "======================"
+echo "Set environment alias"
+echo "======================"
+
+alias m="python wpsblog/manage.py"
+alias ms="python wpsblog/manage.py shell_plus"
+alias mrs="python wpsblog/manage.py runserver"
